Completed the tasks in assingment.ipynb

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -59,9 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3382c1a7-3ea3-4401-9e43-7cc8a38bac1a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# This is the first code cell of the notebook,\n",
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7481677-d99b-484b-9429-112d10c87453",
+   "id": "f4946602-ffc3-4322-89f8-7dff0e17b1a0",
    "metadata": {},
    "source": [
     "<h3 style=\"color: darkorange\";>★ Task 1.A</h3>\n",
@@ -86,17 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3e543a4b-2655-4da9-a4f8-b57269d8d2ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def my_function():\n",
     "    \"\"\"\n",
     "    The output of this function will be tested (it must return True).\n",
     "    \"\"\"\n",
     "\n",
-    "    return NotImplemented\n",
+    "    return True\n",
     "\n",
     "my_function()"
    ]
@@ -134,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5e535ac9-fe21-447d-bf47-01e49ab90e27",
    "metadata": {},
    "outputs": [],
@@ -295,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8e05b701-8dc2-4d63-9cb8-1b7ebf85f69e",
    "metadata": {},
    "outputs": [],
@@ -303,7 +316,7 @@
     "def test_my_function_value(value):\n",
     "    # The pass statement in Python just says that there is nothing here (it is a no-op).\n",
     "    # Replace it with your actual code.\n",
-    "    pass\n",
+    "    assert value is True\n",
     "\n",
     "# Run your new testing function with the result from my_function().\n",
     "test_my_function_value(my_function())"
@@ -353,10 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "918d33c1-064f-48ce-a45e-22dd68c3e7a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test my_rounding_function(): 5 / 6\n",
+      "   Error -- Input: -0.750000, Expected Output: -1, Actual Output: 0\n"
+     ]
+    }
+   ],
    "source": [
     "class TestMyRoundingFunction(autograder.question.Question):\n",
     "    def score_question(self, submission):\n",
@@ -441,10 +463,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2021314f-468d-49f1-8f97-6b91a7a508a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test my_function(): 100 / 100\n"
+     ]
+    }
+   ],
    "source": [
     "class TestMyFunction(autograder.question.Question):\n",
     "    def score_question(self, submission):\n",
@@ -461,6 +491,9 @@
     "            return\n",
     "\n",
     "        # Add your code here.\n",
+    "        if (result is not True):\n",
+    "            self.fail(\"Function must return True.\")\n",
+    "            return\n",
     "        \n",
     "        self.full_credit()\n",
     "\n",
@@ -615,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
